--- a/login/common.html
+++ b/login/common.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>컴포넌트</title>
-  <link rel="stylesheet" href="./style/common.css">
-  <link rel="stylesheet" href="./style/login.css">
+  <link rel="stylesheet" href="./CSS/common.css">
+  <link rel="stylesheet" href="./CSS/login.css">
 </head>
 
 <body>
