--- a/login/main.html
+++ b/login/main.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>일기쓰기 | 두근두근 비밀일기</title>
-  <link rel="stylesheet" href="./style/common.css">
-  <link rel="stylesheet" href="./style/main.css">
+  <link rel="stylesheet" href="./CSS/common.css">
+  <link rel="stylesheet" href="./CSS/main.css">
 </head>
 
 <body>
