--- a/230317/csscook_3/challenges/index.html
+++ b/230317/csscook_3/challenges/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Portfolio Project</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">		
@@ -8,7 +12,9 @@
 	</head>
 	<body>
 
-				
+	
 
 	</body>
 </html>
+
+
