--- a/230320/diary/main.html
+++ b/230320/diary/main.html
@@ -61,6 +61,16 @@
               안고, 뼈 봄바람이다. 가는 곧 아니한 눈에 얼마나 있음으로써 지혜는 대한 얼마나 봄바람이다. 때까지 위하여 가지에 열락의 것이다. 그림자는 꽃이 천하를 우리 찬미를 원대하고, 인생을 때에,
               황금시대다. 목숨을
               할지니, 청춘은 용기가 말이다.</p>
+
+              <div class="button-group">
+                <button type="button">
+                  <img src="./img/icon-edit.svg" alt="수정">
+                </button>
+                <span></span>
+                <button type="button">
+                  <img src="./img/icon-delete.svg" alt="삭제">
+                </button>
+              </div>
           </article>
         </li>
         <li>
