--- a/Vending machine/index.html
+++ b/Vending machine/index.html
@@ -55,7 +55,7 @@
                 <div>잔액</div>
                 <button type="button">거스름돈 반환</button>
 
-                <input type="number" value="입금액 입력">
+                <div>입금액 입력</div>
                 <button type="button">입금</button>
             </section>
         </section>
