--- a/Cola Vending/Vending/index.html
+++ b/Cola Vending/Vending/index.html
@@ -28,7 +28,7 @@
           </button>
         </li>
         <li>
-          <button class="btn-cola" type="button">
+          <button disabled class="btn-cola" type="button">
             <img class="cola-img" src="./img/cola-violet.png" alt="">
             <span class="cola-name">Violet_Cola</span>
             <strong class="cola-price">1000원</strong>
@@ -67,12 +67,83 @@
         </li>
       </ul>
 
+      <div class="container">
+        <div class="bg-box">
+          <h2 class="title">잔액</h2>
+          <p>1000원</p>
+        </div>
+        <button class="btn" type="button">거스름돈 반환</button>
+
+        <label for="input-money" class="a11y-hidden">금액 투입(단위:원)</label>
+        <input id="input-money" min="1000" step="1000" type="number" placeholder="입금액 입력">
+        <button class="btn" type="button">입금</button>
+
+        <h2 class="a11y-hidden">장바구니</h2>
+        <ul class="get-list">
+          <li>
+            <img src="./img/cola-original.png" alt="">
+            Original_Cola
+            <strong>1
+              <span class="a11y-hidden">개</span>
+            </strong>
+          </li>
+          <li>
+            <img src="./img/cola-green.png" alt="">
+            Green_Cola
+            <strong>2
+              <span class="a11y-hidden">개</span>
+            </strong>
+          </li>
+        </ul>
+
+        <button class="btn-get" type="button">획득</button>
+
+
+      </div>
 
 
     </section>
     <!-- //section 1 -->
-    <section class="section2">section 2</section>
-    <section class="section3">section 3</section>
+    <section class="section2">
+      <div class="bg-box">
+        <h2 class="title">소지금</h2>
+        <p><strong>25,000원</strong></p>
+      </div>
+    </section>
+    <section class="section3">
+      <h2 class="get-title">획득한 음료</h2>
+      <ul class="get-list">
+        <li>
+          <img src="./img/cola-original.png" alt="">
+          Original_Cola
+          <strong>1
+            <span class="a11y-hidden">개</span>
+          </strong>
+        </li>
+        <li>
+          <img src="./img/cola-green.png" alt="">
+          Green_Cola
+          <strong>2
+            <span class="a11y-hidden">개</span>
+          </strong>
+        </li>
+        <li>
+          <img src="./img/cola-orange.png" alt="">
+          Orange_Cola
+          <strong>1
+            <span class="a11y-hidden">개</span>
+          </strong>
+        </li>
+        <li>
+          <img src="./img/cola-violet.png" alt="">
+          Violet_Cola
+          <strong>5
+            <span class="a11y-hidden">개</span>
+          </strong>
+        </li>
+      </ul>
+      <p class="total-price">총금액 : 9,000 원</p>
+    </section>
   </main>
 </body>
 
