--- a/Cola Vending/custom.html
+++ b/Cola Vending/custom.html
@@ -9,8 +9,9 @@
   <body>
     <input id="chk1" type="checkbox"><label for="chk1">체크박스1</label>
     <input id="chk2" type="checkbox"><label for="chk2">체크박스2</label>
-    <input id="radio1" type="radio"><label for="radio">라디오1</label>
-    <input id="radio2" type="radio"><label for="radio">라디오2</label>
+
+    <input id="radio1" name="radio" type="radio"><label for="radio">라디오1</label>
+    <input id="radio2" name="radio" type="radio"><label for="radio">라디오2</label>
     
     <select>
         <option>점심메뉴1</option>
