--- a/230317/csscook_3/challenges/index.html
+++ b/230317/csscook_3/challenges/index.html
@@ -21,40 +21,46 @@
 		
 	
 		<section class="project">
-			<img src="./images/photo01.png" alt="Rest">
-			<div class="project-list">
-				<p>Take a rest</p>
-				<ul>
-					<li>It has survived not only five centuries.</li>
-					<li>Why do we use it?</li>
-					<li>Contrary to popular belief, Lorem Ipsum is not simply random text. It has root.</li>
-				</ul>
+			<article>
+				<img src="./images/photo01.png" alt="Rest">
+				<p class="ally-hidden">Rest</p>
+				<div class="project-list">
+					<p>Take a rest</p>
+					<ul>
+						<li>It has survived not only five centuries.</li>
+						<li>Why do we use it?</li>
+						<li>Contrary to popular belief, Lorem Ipsum is not simply random text. It has root.</li>
+					</ul>
+				</div>
+			</article>
+		
+			<article>
+				<img src="./images/photo02.png" alt="Craft">
+				<p class="ally-hidden">Craft</p>
+				<div class="project-list">
+					<p>Build something</p>
+					<ul>
+						<li>There are many variations of passages of Lorem Ipsum available.</li>
+						<li>If you are going to use a passage of Lorem Ipsum.</li>
+						<li>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</li>
+					</ul>
 			</div>
-		</section>
-
-		<section class="project">
-			<img src="./images/photo02.png" alt="Craft">
-			<div class="project-list">
-				<p>Build something</p>
-				<ul>
-					<li>There are many variations of passages of Lorem Ipsum available.</li>
-					<li>If you are going to use a passage of Lorem Ipsum.</li>
-					<li>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</li>
-				</ul>
-			</div>
-		</section>
-
-		<section class="project">
-			<img src="./images/photo03.png" alt="Scrap">
-			<div class="project-list">
-				<p>Reference</p>
-				<ul>
-					<li>Once is therefore always free form repetition, injected humor, or non-characterisic words etc.
-					</li>
-					<li>Predefined chunks as necessary, making this the first true generator on the internet.</li>
-					<li>Finibus Bonorum et Malorum by Cicero are also reproduced in their exact original form.</li>
-				</ul>
-			</div>
+			</article>
+			
+			<article>
+				<img src="./images/photo03.png" alt="Scrap">
+				<p class="ally-hidden">Scrap</p>
+				<div class="project-list">
+					<p>Reference</p>
+					<ul>
+						<li>Once is therefore always free form repetition, injected humor, or non-characterisic words etc.
+						</li>
+						<li>Predefined chunks as necessary, making this the first true generator on the internet.</li>
+						<li>Finibus Bonorum et Malorum by Cicero are also reproduced in their exact original form.</li>
+					</ul>
+				</div>
+			</article>
+			
 		</section>
 
 	</body>
