--- a/Events/challenges/index.html
+++ b/Events/challenges/index.html
@@ -7,7 +7,30 @@
     <title>Events</title>
   </head>
   <body>
-    
+    <!-- header -->
+    <header class="section-header">
+
+        <div class="title">
+            <h1 class="title-headings">
+                CALENDAR AND
+                <strong>EVENT TOOLS.</strong>
+            </h1>
+            <button type="button">+ Add to Calendar</button>
+        </div>
+
+    </header>
+
+    <!-- main -->
+    <main>
+        <section>
+
+        </section>
+    </main>
+
+    <!-- footer -->
+    <footer>
+
+    </footer>
 
   </body>
 </html>
