--- a/Events/challenges/index.html
+++ b/Events/challenges/index.html
@@ -9,7 +9,6 @@
   <body>
     <!-- header -->
     <header class="section-header">
-
         <div class="title">
             <h1 class="title-headings">
                 CALENDAR AND
@@ -17,20 +16,57 @@
             </h1>
             <button type="button">+ Add to Calendar</button>
         </div>
-
     </header>
 
     <!-- main -->
     <main>
         <section>
-
+          <article>
+            <img src="./images/badge.png" alt="badge">
+            <img src="./images/cover01.png" alt="digital">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+            </ul>
+            <h2>Digital Workplace Experience</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div>SOLDOUT</div>
+          </article>
+          <article>
+            <img src="./images/cover02.png" alt="Expo">
+            <ul>
+              <li>AR</li>
+              <li>VR</li>
+              <li>Headsets</li>
+            </ul>
+            <h2>Augmented World Expo 2022</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <div>+ More People
+              <img src="./images/people01.png" alt="people01">
+              <img src="./images/people02.png" alt="people02">
+              <img src="./images/people03.png" alt="people03">
+            </div>
+          </article>
+          <article>
+            <img src="./images/cover03.png" alt="Adobe">
+            <ul>
+              <li>Photoshop</li>
+              <li>Illustrator</li>
+            </ul>
+            <h2>Adobe Summit</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
+            <div>+ More People
+              <img src="./images/people04.png" alt="people04">
+              <img src="./images/people05.png" alt="people05">
+              <img src="./images/people06.png" alt="people06">
+            </div>
+          </article>
         </section>
     </main>
 
     <!-- footer -->
     <footer>
-
     </footer>
-
   </body>
 </html>
