--- a/Events/challenges/index.html
+++ b/Events/challenges/index.html
@@ -25,9 +25,9 @@
             <img src="./images/badge.png" alt="badge">
             <img src="./images/cover01.png" alt="digital">
             <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
+              <li class="ally-hidden">HTML</li>
+              <li class="ally-hidden">CSS</li>
+              <li class="ally-hidden">JavaScript</li>
             </ul>
             <h2>Digital Workplace Experience</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -36,9 +36,9 @@
           <article>
             <img src="./images/cover02.png" alt="Expo">
             <ul>
-              <li>AR</li>
-              <li>VR</li>
-              <li>Headsets</li>
+              <li class="ally-hidden">AR</li>
+              <li class="ally-hidden">VR</li>
+              <li class="ally-hidden">Headsets</li>
             </ul>
             <h2>Augmented World Expo 2022</h2>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
@@ -51,8 +51,8 @@
           <article>
             <img src="./images/cover03.png" alt="Adobe">
             <ul>
-              <li>Photoshop</li>
-              <li>Illustrator</li>
+              <li class="ally-hidden">Photoshop</li>
+              <li class="ally-hidden">Illustrator</li>
             </ul>
             <h2>Adobe Summit</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
