--- a/Tailwind CSS/001_sizing.html
+++ b/Tailwind CSS/001_sizing.html
@@ -6,6 +6,21 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <!-- space-y-8 : 각 요소의 간격, 1이 0.25rem -->
+    <!-- bg-red-200 : red color 숫자가 높아질수록 진해짐 -->
+    <!-- shadow : 그림자, rounded : radius -->
+    <!--
+
+        w-96 : 96%나 96px이 아님, 0.25rem*96임
+        https://tailwindcss.com/docs/width
+    
+    -->
+    <h1>hello</h1>
+    <h2>hello</h2>
+    <h3>hello</h3>
+    <h4>hello</h4>
+    <h5>hello</h5>
+    <h6>hello</h6>
     <div class="space-y-4 bg-red-200">
         <div class="w-96 bg-white shadow rounded">
             w-96
