--- a/Tailwind CSS/001_sizing.html
+++ b/Tailwind CSS/001_sizing.html
@@ -21,7 +21,8 @@
     <h4>hello</h4>
     <h5>hello</h5>
     <h6>hello</h6>
-    <div class="space-y-4 bg-red-200">
+    <!-- space-y-4 : margin-top: 1rem; /* 16px */ -->
+    <div class="space-y-4 bg-red-200 pt-4">
         <div class="w-96 bg-white shadow rounded">
             w-96
         </div>
@@ -45,6 +46,15 @@
         </div>
         <div class="w-48 bg-white shadow rounded">
             w-48
+        </div>
+        <div class="w-1/4 bg-white shadow rounded">
+            1/4
+        </div>
+        <div class="w-2/4 bg-white shadow rounded">
+            2/4
+        </div>
+        <div class="w-3/4 bg-white shadow rounded">
+            3/4
         </div>
     </div>
 </body>
