--- a/Tailwind CSS/002_colors.html
+++ b/Tailwind CSS/002_colors.html
@@ -6,6 +6,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <!-- 비교해보세요. -->
+    
+    <!-- text-gray-300 -->
+    <!-- https://tailwindcss.com/docs/text-color -->
+
+    <!-- bg-sky-300  -->
+    <!-- https://tailwindcss.com/docs/background-color -->
     <div class="grid grid-cols-10 gap-2">
         <div class="bg-sky-50 aspect-square"></div>
         <div class="bg-sky-100 aspect-square"></div>
