--- a/Tailwind CSS/003_typo.html
+++ b/Tailwind CSS/003_typo.html
@@ -29,6 +29,12 @@
                     line-height: 2rem; /* 32px */
         ...
     -->
+    
+    <!--
+        <p class="text-[14px]">
+            Arbitrary values
+        </p>
+    -->
     <div class="space-y-5">
         <div class="p-3 bg-white shadow rounded-lg">
           <h3 class="text-xs border-b">font-sans</h3>
@@ -48,6 +54,9 @@
             The quick brown fox jumps over the lazy dog.
           </p>
         </div>
-    </div>
+      </div>
+    <p class="text-[24px]">
+        Arbitrary values
+    </p>
 </body>
 </html>
