--- a/JavaScript/230330/001_DOM_BOM.html
+++ b/JavaScript/230330/001_DOM_BOM.html
@@ -9,9 +9,12 @@
   <body>
     <script>
         // DOM
+        // DOM은 document, 현재 눈에 보이는 웹문서에 대한 제어와 변경
         document.write('hello');
+        
 
         // BOM
+        // BOM은 window 속성에 속하여 document가 아닌, window를 제어
         window.alert('hello') //: 브라우저에 메세지 다이얼로그를 띄웁니다.
         window.prompt('입력해!!') //: 브라우저에 사용자의 데이터를 입력받을 수 있는 입력 창을 띄웁니다.
         window.confirm('확인!') //: true 혹은 false 값을 반환하는 다이얼로그를 띄웁니다.
