--- a/JavaScript/230330/004_산술연산.html
+++ b/JavaScript/230330/004_산술연산.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>산술연산</title>
   </head>
   <body>
     <script>
-        // 산술연산, 논리연산, 비교연산
+        // 산술연산
         const x = 10;
         const y = 3;
-        console.log(x + y);
-        console.log(x - y);
-        console.log(x / y);
-        console.log(x * y);
-        console.log(x ** y);
-        console.log(x % y);
+        console.log(x + y); // 결과 : 13
+        console.log(x - y); // 결과 : 7
+        console.log(x / y); // 결과 : 3.333333...
+        console.log(x * y); // 결과 : 30
+        console.log(x ** y); // 승수 10 * 10 * 10 = 10의 3제곱 / 결과 : 1000
+        console.log(x % y); // 몫 : 3, 나머지 : 1 / 결과 : 1
         </script>
-
   </body>
 </html>
