--- a/Tailwind/013_반응형.html
+++ b/Tailwind/013_반응형.html
@@ -21,6 +21,18 @@
             </p>
         </div>
         <!-- https://play.tailwindcss.com/에서 config 수정 후 가능합니다. -->
+        <!-- 
+            /** @type {import('tailwindcss').Config} */
+            module.exports = {
+            darkMode: 'class',
+            theme: {
+                extend: {
+                // ...
+                },
+            },
+            plugins: [],
+            }
+        -->
         <div class="dark">
             <div
                 class="bg-white dark:bg-slate-900 rounded-lg px-6 py-8 ring-1 ring-slate-900/5 shadow-xl"
