--- a/Tailwind/010_transition.html
+++ b/Tailwind/010_transition.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <!-- https://tailwindcss.com/docs/transition-property -->
+        <!-- transition-timing-function -->
         <div class="flex h-64 justify-center items-center">
             <button
                 class="transition ease-in-out delay-300 bg-blue-500 hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300 rounded p-5 m-3 text-white"
