--- a/Tailwind/011_animation.html
+++ b/Tailwind/011_animation.html
@@ -24,7 +24,7 @@
                     >
                         <!-- animate-spin, animate-ping, animate-bounce -->
                         <span
-                            class="animate-ping absolute inline-flex h-3 w-1 rounded-full bg-sky-400 opacity-75"
+                            class="animate-bounce absolute inline-flex h-3 w-1 rounded-full bg-sky-400 opacity-75"
                         ></span>
                         <!-- <span
                             class="relative inline-flex rounded-full h-3 w-3 bg-sky-500"
