--- a/Tailwind/012_유틸리티클래스.html
+++ b/Tailwind/012_유틸리티클래스.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <!-- https://tailwindcss.com/docs/functions-and-directives#apply -->
+        <!-- https://play.tailwindcss.com/에서는 apply 문법을 사용하실 수 있습니다. -->
 
         <!-- 
         아래처럼 사용하기 위해서는
@@ -16,7 +17,7 @@
             @apply border-4 border-blue-500;
         }
         를 styles.scss에 @apply를 통해 적용해야 한다.
-    -->
+        -->
         <h2>1</h2>
         <div class="grid grid-cols-3 gap-2 border-4 border-red-400">
             <div class="border-4 border-blue-500">hello</div>
