--- a/JavaScript/230330/007_논리연산_실무예제.html
+++ b/JavaScript/230330/007_논리연산_실무예제.html
@@ -11,6 +11,7 @@
         // 3, 6, 9, 12, 15, 18
         // 5, 10, 15
 
+        // 문제사이트 
         // https://codingdojang.com/scode/350#answer-filter-area
         for (let i = 0; i < 101; i++) {
             // console.log(i)
