--- a/JavaScript/230330/010_string.html
+++ b/JavaScript/230330/010_string.html
@@ -61,9 +61,9 @@
         let test = '                hello world'
         console.log('               hello world')
         test.replaceAll(' ', '')
-        test.trim()
+        test.trim() // 문자열 앞 뒤의 공백 제거
 
-        
+
     </script>
 </body>
 </html>
