--- a/JavaScript/230330/009_string.html
+++ b/JavaScript/230330/009_string.html
@@ -14,8 +14,8 @@
         console.log(txt[0]) // Sass 1, 다른 프로그래밍 언어는 0부터 시작
         console.log(txt[2])
         console.log(txt[-1]) // JavaScript에서 마이너스 인덱싱을 허락하지 않음
-        console.log(txt.loegth)
-        console.log(txt.indexOf('E'))
+        console.log(txt.length)
+        console.log(txt.indexOf('E')) // indexO() : 문자열 안에 존재하는 특정한 문자를 검색한 후, 문자의 인덱스를 반환함
         console.log(txt.search('E'))
 
         console.log(txt.indexOf('Z')) // 없는 값은 -1
