--- a/JavaScript/230403/006_단락회로평가.html
+++ b/JavaScript/230403/006_단락회로평가.html
@@ -33,7 +33,7 @@
 
         let username2 = "zeon";
         username2 = username2 || "이름을 입력하지 않으신 분" 
-        console.log(username) //username2 튀어나옴
+        console.log(username2) //username2 튀어나옴
 
         //or 은 하나라도 true라면 true로 처리 > 앞에꺼 나옴 / false일 경우 뒤에꺼 나옴
 
