--- a/HTML_CSS/login/main.html
+++ b/HTML_CSS/login/main.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>일기쓰기 | 두근두근 비밀일기</title>
-  <link rel="stylesheet" href="./style/common.css">
-  <link rel="stylesheet" href="./style/main.css">
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/main.css">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
   <meta name="description" content="나만의 설레는 비밀일기를 작성해보세요!">
