--- a/HTML_CSS/Login/Login.html
+++ b/HTML_CSS/Login/Login.html
@@ -14,7 +14,7 @@
 <body>
     <main id="appLogin">
         <article class="cont-login">
-            <h1 class="tit-weniv"><img src="../img/logo.png" alt="weniv"></h1>
+            <h1 class="tit-weniv"><img src="./img/logo.png" alt="weniv"></h1>
             <p class="txt-login">위니브를 더 즐겁고 편리하게 이용하세요.</p>
             <button type="button" class="btn-login">로그인</button>
         </article>
@@ -52,7 +52,7 @@
                     <li><a href="javascript:void(0);" class="icon-kakao link-sns-login">카카오 계정으로 로그인</a></li>
                 </ul>
             </section>
-            <button type="button" class="btn-close"><img src="../img/close.png" alt="로그인 닫기"></button>
+            <button type="button" class="btn-close"><img src="./img/close.png" alt="로그인 닫기"></button>
         </section>
 
     </article>
