--- a/Sass/Profile/img/index.html
+++ b/Sass/Profile/img/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jay</title>
+    <title>JiEun</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
       integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,14 +15,14 @@
   </head>
 
   <body>
-    <h1 class="a11y-hidden">Jay</h1>
+    <h1 class="a11y-hidden">JiEun</h1>
 
     <article class="card">
       <figure class="cover">
         <img src="img/img1.png" alt="Profile Image">
       </figure>
       <header class="contents">
-        <h2>Jay</h2>
+        <h2>JiEun</h2>
         <h3>Junior Front End Developer</h3>
         <p>Please add your content here. Keep it short and simple. And smile :)</p>
       </header>
