--- a/JavaScript/230411/007.html
+++ b/JavaScript/230411/007.html
@@ -58,6 +58,20 @@
             doloremque voluptas optio a omnis, ullam quae! Autem eveniet animi tempora pariatur dolorum ad laboriosam!
         </p>
     </main>
+
+    <script>
+        const inpPicker = document.querySelectorAll('.inp-picker');
+        const root = document.querySelector(':root');
+
+        inpPicker.forEach((item) => {
+            item.addEventListener('input', () => {
+                const name = `--main-$(item.dataset.id)`;
+                root.style.setProperty(name, item.value);
+            });
+        });
+
+        
+    </script>
 </body>
 
 </html>
