--- a/HTML_CSS/Landing Page.html/page.html
+++ b/HTML_CSS/Landing Page.html/page.html
@@ -31,7 +31,7 @@
       ever since the 1500s, when an unknown
     </p>
     <button type="button">Download</button>
-    <img src="./img/고양이 1.png" alt="">
+    <img class="center" src="./img/고양이 1.png" alt="">
   </section>
   <section>
     <img src="./img/img_4.png" alt="">
@@ -42,7 +42,7 @@
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
   </section>
   <section>
-    <h2>dummy text of the printing and dummy</h2>
+    <h2 class="emphasis">dummy text of the printing and dummy</h2>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
     <img src="./img/img_1.png" alt="">
