--- a/JavaScript/230419/pokemon.html
+++ b/JavaScript/230419/pokemon.html
@@ -13,7 +13,7 @@
     <article id="app">
         <h2>포켓몬 케러셀</h2>
         <ul class="list-item">
-            <li><img src="https://raw.githubusercontent.com/nugurejeil/sharingPhoto/main/jammanbo.png" alt=""></li>
+            <!-- <li><img src="https://raw.githubusercontent.com/nugurejeil/sharingPhoto/main/jammanbo.png" alt=""></li>
             <li><img src="https://raw.githubusercontent.com/nugurejeil/sharingPhoto/main/ev.png?raw=true" alt="">
             </li>
             <li><img src="https://raw.githubusercontent.com/nugurejeil/sharingPhoto/main/mazayoung.png?raw=true" alt="">
@@ -22,6 +22,7 @@
             <li><img src="https://raw.githubusercontent.com/nugurejeil/sharingPhoto/main/nyaong.png" alt=""></li>
             <li><img src="https://raw.githubusercontent.com/nugurejeil/sharingPhoto/main/pulin.png" alt=""></li>
             <li><img src="https://raw.githubusercontent.com/nugurejeil/sharingPhoto/main/weirdseed.png" alt=""></li>
+            <li><img src="https://raw.githubusercontent.com/nugurejeil/sharingPhoto/main/weirdseed.png" alt=""></li> -->
         </ul>
     </article>
 
@@ -47,7 +48,6 @@
         items.forEach((item, index) => {
             item.style.transform = `rotateY(${360 / items.length * index}deg) translateZ(${radius}px)`;
         });
-
 
         const angle = 360 / items.length;
         let currAngle = 0;
