--- a/JavaScript/로컬스토리지 과제/로컬스토리지.html
+++ b/JavaScript/로컬스토리지 과제/로컬스토리지.html
@@ -1,133 +1,142 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            rel="stylesheet"
-            href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css"
-        />
-        <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
-        <style>
-            main {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-            }
 
-            img {
-                display: block;
-                width: 300px;
-                height: 300px;
-            }
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
+    <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
+    <style>
+        main {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
 
-            input {
-                display: block;
-                width: 300px;
-                height: 30px;
-                margin-bottom: 10px;
-            }
+        img {
+            display: block;
+            width: 300px;
+            height: 300px;
+        }
 
-            textarea {
-                display: block;
-                width: 300px;
-                height: 300px;
-                margin-bottom: 10px;
-            }
+        input {
+            display: block;
+            width: 300px;
+            height: 30px;
+            margin-bottom: 10px;
+        }
 
-            button {
-                margin-top: 10px;
-                display: block;
-                width: 306px;
-                height: 30px;
-            }
-        </style>
-    </head>
-    <body>
-        <main>
-            <section>
-                <img src="./img/뉴진스토끼.png" alt="">
-                <input type="text" name="" id="title" placeholder="오늘의 개발 메모 제목" />
-                <div id="editor"></div>
-                <!-- <textarea name="" id="content" cols="30" rows="10"></textarea> -->
-                <button onclick="saveNote()">메모</button>
-            </section>
-            <section id="display"></section>
-        </main>
-        <script>
-            let allMemo = JSON.parse(localStorage.getItem("allMemo"));
-            allMemo = allMemo ?? [];
+        textarea {
+            display: block;
+            width: 300px;
+            height: 300px;
+            margin-bottom: 10px;
+        }
 
-            const Editor = toastui.Editor;
+        button {
+            margin-top: 10px;
+            display: block;
+            width: 306px;
+            height: 30px;
+        }
+    </style>
+</head>
 
-            const editor = new Editor({
-                el: document.querySelector("#editor"),
-                height: "600px",
-                initialEditType: "markdown",
-                previewStyle: "vertical",
-            });
-            // editor.getHTML()
-            // editor.getMarkdown()
+<body>
+    <main>
+        <section>
+            <div class="container">
+                <article class="card-item">
+                    <a href="#">
+                        <img src="./img/뉴진스토끼.png" alt="">
+                        <div class="card-text">
+                            <h2 class="title"></h2>
+                            <p></p>
+                            <p class="underline">Read</p>
+                        </div>
+                        <input type="text" name="" id="title" placeholder="오늘의 개발 메모 제목" />
+                        <div id="editor"></div>
+                        <!-- <textarea name="" id="content" cols="30" rows="10"></textarea> -->
+                        <button onclick="saveNote()">메모</button>
+        </section>
+        <section id="display"></section>
+    </main>
+    <script>
+        let allMemo = JSON.parse(localStorage.getItem("allMemo"));
+        allMemo = allMemo ?? [];
 
+        const Editor = toastui.Editor;
+
+        const editor = new Editor({
+            el: document.querySelector("#editor"),
+            height: "600px",
+            initialEditType: "markdown",
+            previewStyle: "vertical",
+        });
+        // editor.getHTML()
+        // editor.getMarkdown()
+
+        render();
+
+        function saveNote() {
+            const title = document.getElementById("title").value;
+            // const content = document.getElementById("content").value;
+            const content = editor.getHTML();
+
+            allMemo.push({ title, content, len: allMemo.length });
+
+            localStorage.setItem("allMemo", JSON.stringify(allMemo));
             render();
+        }
 
-            function saveNote() {
-                const title = document.getElementById("title").value;
-                // const content = document.getElementById("content").value;
-                const content = editor.getHTML();
+        function render() {
+            const display = document.getElementById("display");
+            display.innerHTML = "";
 
-                allMemo.push({ title, content, len: allMemo.length });
+            // // 최신 게시물이 위로 올라오도록
+            // for (let i = allMemo.length; i > 0 ; i--) {
+            //     // 아래와 유사 코드
+            // }
 
-                localStorage.setItem("allMemo", JSON.stringify(allMemo));
-                render();
+            for (const item of allMemo) {
+                const saveTitle = document.createElement("h2");
+                const saveContent = document.createElement("div");
+                const saveId = document.createElement("p");
+                const deleteMemoBtn = document.createElement("button");
+
+                saveTitle.textContent = item.title;
+                saveContent.innerHTML = item.content;
+                saveId.textContent = item.len + 1;
+                deleteMemoBtn.textContent = "삭제";
+                deleteMemoBtn.setAttribute("id", item.len);
+                deleteMemoBtn.setAttribute("onclick", "remove()");
+
+                display.appendChild(saveId);
+                display.appendChild(saveTitle);
+                display.appendChild(saveContent);
+                display.appendChild(deleteMemoBtn);
             }
+        }
 
-            function render() {
-                const display = document.getElementById("display");
-                display.innerHTML = "";
-
-                // // 최신 게시물이 위로 올라오도록
-                // for (let i = allMemo.length; i > 0 ; i--) {
-                //     // 아래와 유사 코드
-                // }
-
-                for (const item of allMemo) {
-                    const saveTitle = document.createElement("h2");
-                    const saveContent = document.createElement("div");
-                    const saveId = document.createElement("p");
-                    const deleteMemoBtn = document.createElement("button");
-
-                    saveTitle.textContent = item.title;
-                    saveContent.innerHTML = item.content;
-                    saveId.textContent = item.len + 1;
-                    deleteMemoBtn.textContent = "삭제";
-                    deleteMemoBtn.setAttribute("id", item.len);
-                    deleteMemoBtn.setAttribute("onclick", "remove()");
-
-                    display.appendChild(saveId);
-                    display.appendChild(saveTitle);
-                    display.appendChild(saveContent);
-                    display.appendChild(deleteMemoBtn);
-                }
-            }
-
-            function remove() {
-                // console.log(event.srcElement.id);
-                // console.log(allMemo);
-                const idx = allMemo.find(
-                    (item) => item.len == event.srcElement.id
+        function remove() {
+            // console.log(event.srcElement.id);
+            // console.log(allMemo);
+            const idx = allMemo.find(
+                (item) => item.len == event.srcElement.id
+            );
+            if (idx) {
+                allMemo.splice(
+                    allMemo.findIndex((item) => item.len == idx.len),
+                    1
                 );
-                if (idx) {
-                    allMemo.splice(
-                        allMemo.findIndex((item) => item.len == idx.len),
-                        1
-                    );
-                }
-                localStorage.setItem("allMemo", JSON.stringify(allMemo));
-                render();
             }
-        </script>
-    </body>
+            localStorage.setItem("allMemo", JSON.stringify(allMemo));
+            render();
+        }
+    </script>
+</body>
+
 </html>
