--- a/JavaScript/로컬스토리지 과제/로컬스토리지.html
+++ b/JavaScript/로컬스토리지 과제/로컬스토리지.html
@@ -55,9 +55,9 @@
                         <div class="card-text">
                             <h2 class="title"></h2>
                             <p></p>
-                            <p class="underline">Read</p>
+                            <p class="underline">//날짜넣기</p>
                         </div>
-                        <input type="text" name="" id="title" placeholder="오늘의 개발 메모 제목" />
+                        <input type="text" name="" id="title" placeholder="오늘의 개발 메모 타이틀" />
                         <div id="editor"></div>
                         <!-- <textarea name="" id="content" cols="30" rows="10"></textarea> -->
                         <button onclick="saveNote()">메모</button>
