--- a/JavaScript/로컬스토리지 과제/과제.html
+++ b/JavaScript/로컬스토리지 과제/과제.html
@@ -17,12 +17,12 @@
             margin: 0;
         }
 
-        main {
+        /* main {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-        }
+        } */
 
         input {
             display: flex;
@@ -42,13 +42,6 @@
         input::placeholder {
             text-align: center;
             color: #fff;
-        }
-
-        textarea {
-            display: block;
-            width: 300px;
-            height: 300px;
-            margin-bottom: 10px;
         }
 
         button {
@@ -86,66 +79,13 @@
             vertical-align: top;
         }
 
-        .card-text {
-            padding: 24px 16px 16px;
-        }
-
-        .card-text .title {
-            font-size: 16px;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-
-        .card-text .title+p {
-            font-size: 12px;
-            color: #5a6a72;
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 2;
-            word-break: break-all;
-            margin: 12px 0 16px;
-            line-height: 20px;
-            height: 40px;
-        }
-
-        .underline {
-            text-decoration: underline;
-            font-weight: bold;
-            font-size: 14px;
-            padding-left: 6px;
-        }
-
-        .container {
+        /* .container {
             display: flex;
             flex-wrap: wrap;
             gap: 32px 24px;
             width: min(1224px, 100% - 60px);
             margin: auto;
-        }
-
-        .container article {
-            width: calc((100% - (24px * 3)) / 4);
-        }
-
-        @media (min-width: 641px) and (max-width: 1024px) {
-            .container article {
-                width: calc((100% - (24px * 2)) / 3);
-            }
-        }
-
-        @media (min-width: 501px) and (max-width: 640px) {
-            .container article {
-                width: calc((100% - 24px) / 2);
-            }
-        }
-
-        @media (max-width: 500px) {
-            .container article {
-                width: 100%;
-            }
-        }
+        } */
     </style>
 </head>
 
@@ -155,23 +95,20 @@
             <div class="container">
                 <article class="card-item">
                     <a href="#">
-                        <img src="./img/뉴진스토끼.png" alt="">
-                        <div class="card-text">
-                            <p class="underline" id="clock">00:00:00</p>
-                        </div>
+                        <img id="img" src="./img/뉴진스토끼.png" alt="">
                         <input type="text" name="" id="title" placeholder="오늘의 개발 메모 타이틀" />
                         <div id="editor"></div>
-                        <!-- <textarea name="" id="content" cols="30" rows="10"></textarea> -->
                         <button onclick="saveNote()">메모</button>
+                        <!-- <button onclick="removeAll()" class="deleteMemoBtn" type="button">모두 삭제</button> -->
         </section>
         <section id="display"></section>
     </main>
     <script>
+        const today = new Date();
         let allMemo = JSON.parse(localStorage.getItem("allMemo"));
         allMemo = allMemo ?? [];
 
         const Editor = toastui.Editor;
-
         const editor = new Editor({
             el: document.querySelector("#editor"),
             height: "400px",
@@ -184,11 +121,11 @@
         render();
 
         function saveNote() {
+            const img = document.querySelector('.article-container');
             const title = document.getElementById("title").value;
-            // const content = document.getElementById("content").value;
             const content = editor.getHTML();
 
-            allMemo.push({ title, content, len: allMemo.length });
+            allMemo.push({ img, title, content, len: allMemo.length });
 
             localStorage.setItem("allMemo", JSON.stringify(allMemo));
             render();
@@ -204,11 +141,13 @@
             // }
 
             for (const item of allMemo) {
+                const saveImg = document.createElement("img");
                 const saveTitle = document.createElement("h2");
                 const saveContent = document.createElement("div");
                 const saveId = document.createElement("p");
                 const deleteMemoBtn = document.createElement("button");
 
+                saveImg.innerHTML = item.img;
                 saveTitle.textContent = item.title;
                 saveContent.innerHTML = item.content;
                 saveId.textContent = item.len + 1;
@@ -217,6 +156,7 @@
                 deleteMemoBtn.setAttribute("onclick", "remove()");
 
                 display.appendChild(saveId);
+                display.appendChild(saveImg);
                 display.appendChild(saveTitle);
                 display.appendChild(saveContent);
                 display.appendChild(deleteMemoBtn);
@@ -236,6 +176,12 @@
                 );
             }
             localStorage.setItem("allMemo", JSON.stringify(allMemo));
+            render();
+        }
+
+        function removeAll() {
+            allPost.splice(1);
+            localStorage.setItem("allPost", JSON.stringify(allPost));
             render();
         }
     </script>
