--- a/JavaScript/230329/003.html
+++ b/JavaScript/230329/003.html
@@ -7,6 +7,7 @@
     <title></title>
   </head>
   <body>
+    <!-- 버튼클릭 시 hello world를 출력하는 창이 생성됨 -->
     <button oneclick="window.alert('hello world!');">hello</button>
 
   </body>
