--- a/HTML_CSS/Landing Page.html/page.html
+++ b/HTML_CSS/Landing Page.html/page.html
@@ -19,7 +19,7 @@
     </ul>
     <button type="button">Download</button>
   </header>
-  <section>
+  <section class="main">
     <h2>
       Lorem Ipsum is simply
       dummy text of the printing and
@@ -33,7 +33,7 @@
     <button type="button">Download</button>
     <img class="center" src="./img/고양이 1.png" alt="">
   </section>
-  <section>
+  <section class="middle">
     <img src="./img/img_4.png" alt="">
     <h2>
       Lorem Ipsum is simply
@@ -41,7 +41,7 @@
     </h2>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
   </section>
-  <section>
+  <section class="card">
     <h2 class="emphasis">dummy text of the printing and dummy</h2>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
