--- a/HTML_CSS/Landing Page/page.html
+++ b/HTML_CSS/Landing Page/page.html
@@ -10,28 +10,30 @@
 </head>
 
 <body>
-  <header>
-    <h1>HODU</h1> <!-- 이미지 처리하기 -->
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Support</li>
-    </ul>
-    <button type="button">Download</button>
-  </header>
-  <section class="main">
-    <h2>
-      Lorem Ipsum is simply
-      dummy text of the printing and
-    </h2>
-    <p>
-      Lorem Ipsum is simply dummy text of the printing and
-      typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text
-      ever since the 1500s, when an unknown
-    </p>
-    <button type="button">Download</button>
-    <img class="center" src="./img/고양이 1.png" alt="">
+  <section class="heading">
+    <header>
+      <h1>HODU</h1> <!-- 이미지 처리하기 -->
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Support</li>
+      </ul>
+      <button type="button">Download</button>
+    </header>
+    <section class="main">
+      <h2>
+        Lorem Ipsum is simply
+        dummy text of the printing and
+      </h2>
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and
+        typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy text
+        ever since the 1500s, when an unknown
+      </p>
+      <button type="button">Download</button>
+      <img class="center" src="./img/고양이 1.png" alt="">
+    </section>
   </section>
   <section class="middle">
     <img src="./img/img_4.png" alt="">
