헤더 수정중

--- a/HTML_CSS/Landing Page/page.html
+++ b/HTML_CSS/Landing Page/page.html
@@ -12,15 +12,17 @@
 <body>
   <section class="heading">
     <header>
-      <h1>HODU</h1> <!-- 이미지 처리하기 -->
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Support</li>
-      </ul>
-      <button type="button">Download</button>
+      <img src="./img/Logo-hodu.png" alt="">
+      <div class="info">
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Support</li>
+        </ul>
+        <button type="button">Download</button>
+      </div>
     </header>
-    <section class="main">
+    <!-- <section class="main">
       <h2>
         Lorem Ipsum is simply
         dummy text of the printing and
@@ -65,14 +67,15 @@
     </div>
   </section>
   <footer>
-    <h1>HODU</h1> <!-- 이미지 처리하기 -->
-    <ul> <!-- 이미지처리하기 -->
+    <h1>HODU</h1>  이미지 처리하기 
+    <ul> 이미지처리하기 
       <li>Twiter</li>
       <li>Instagram</li>
       <li>Facebook</li>
       <li>Youtube</li>
     </ul>
-  </footer>
+  </footer> 
+-->
 
 </body>
 
