--- a/HTML_CSS/Landing Page/page.html
+++ b/HTML_CSS/Landing Page/page.html
@@ -10,17 +10,15 @@
 </head>
 
 <body>
-  <section class="heading">
+  <section>
     <header>
       <img src="./img/Logo-hodu.png" alt="">
-      <div class="info">
         <ul>
           <li>Home</li>
           <li>About</li>
           <li>Support</li>
         </ul>
         <button type="button">Download</button>
-      </div>
     </header>
     <!-- <section class="main">
       <h2>
