Main 추가 후 수정중

--- a/HTML_CSS/Landing Page/page.html
+++ b/HTML_CSS/Landing Page/page.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-  <section>
     <header>
       <img src="./img/Logo-hodu.png" alt="">
         <ul>
@@ -20,7 +19,7 @@
         </ul>
         <button type="button">Download</button>
     </header>
-    <!-- <section class="main">
+    <section class="main">
       <h2>
         Lorem Ipsum is simply
         dummy text of the printing and
@@ -34,8 +33,7 @@
       <button type="button">Download</button>
       <img class="center" src="./img/고양이 1.png" alt="">
     </section>
-  </section>
-  <section class="middle">
+<!--  <section class="middle">
     <img src="./img/img_4.png" alt="">
     <h2>
       Lorem Ipsum is simply
