메인화면 완성

--- a/HTML_CSS/Landing Page/page.html
+++ b/HTML_CSS/Landing Page/page.html
@@ -10,25 +10,25 @@
 </head>
 
 <body>
-  <header>
-    <img src="./img/Logo-hodu.png" alt="">
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Support</li>
-    </ul>
-    <button type="button">Download</button>
-  </header>
-  <section class="main">
+  <section class="top">
+    <header>
+      <img class="nav" src="./img/Logo-hodu.png" alt="">
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Support</li>
+      </ul>
+      <button type="button">Download</button>
+    </header>
     <h2>
       Lorem Ipsum is simply
       dummy text of the printing and
     </h2>
-    <br>
-      Lorem Ipsum is simply dummy text of the printing and
-      typesetting industry. </br>
-      Lorem Ipsum has been the industry's standard dummy text
-      ever since the 1500s, when an unknown
+    <p>
+    Lorem Ipsum is simply dummy text of the printing and
+    typesetting industry. <br>
+    Lorem Ipsum has been the industry's standard dummy text
+    ever since the 1500s, when an unknown
     </p>
     <button class="maindownload" type="button">Download</button>
     <img class="center" src="./img/고양이 1.png" alt="">
