로컬스토리지

--- a/JavaScript/로컬스토리지 과제/과제.html
+++ b/JavaScript/로컬스토리지 과제/과제.html
@@ -120,6 +120,7 @@
 
         render();
 
+        //메모 저장코드
         function saveNote() {
             const img = document.querySelector('.article-container');
             const title = document.getElementById("title").value;
@@ -163,6 +164,7 @@
             }
         }
 
+        //메모 삭제코드
         function remove() {
             // console.log(event.srcElement.id);
             // console.log(allMemo);
