--- a/HTML_CSS/Landing Page/page.html
+++ b/HTML_CSS/Landing Page/page.html
@@ -41,7 +41,7 @@
     </h2>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
   </section>
-  <!-- <section class="card">
+  <section class="card">
     <h2 class="emphasis">dummy text of the printing and dummy</h2>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
@@ -52,7 +52,7 @@
       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
       Ipsum is simply dummy text of the printing and typesetting industry. </p>
     <button type="button">Download</button>
-    <div>
+  <!--  <div>
       <h3>Subscribe to our Blog post</h3>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has been the industry's standard dummy text </p>
