--- a/HTML_CSS/Landing Page/page.html
+++ b/HTML_CSS/Landing Page/page.html
@@ -52,8 +52,8 @@
       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
       Ipsum is simply dummy text of the printing and typesetting industry. </p>
     <button type="button">Download</button>
-  <!--  <div>
-      <h3>Subscribe to our Blog post</h3>
+   <div>
+      <!-- <h3>Subscribe to our Blog post</h3>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has been the industry's standard dummy text </p>
       <form action="">
